# ipx_icp

./: .gitignore  README.md  setup.sh
frontend/: .eslintrc.json  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/create-campaign/: page.tsx
frontend/components/: AuthProvider.tsx  CampaignExplorer.tsx  CreateCampaign.tsx  Features.tsx  FloatingDock.tsx  Footer.tsx  Hero.tsx  IPXComponents.tsx  MyNFTs.tsx  Navbar.tsx  WalletConnect.tsx  YouTubeConnect.tsx
frontend/hooks/: useIPXProtocol.ts
frontend/lib/: agent.ts  auth.ts  useInternetIdentity.ts  zkProofUtils.ts
frontend/services/: protocolServices.ts
frontend/types/: canisters.ts  circomlibjs.d.ts  youtube.ts
ipx-protocol/: Cargo.toml  dfx.json
ipx-protocol/candid/: campaign-factory.did  ipx-dao.did  ipx-stream.did  nft-registry.did  revenue-api-connector.did  vault.did
ipx-protocol/canisters/campaign-factory/: Cargo.toml
ipx-protocol/canisters/campaign-factory/src/: lib.rs
ipx-protocol/canisters/ipx-dao/: Cargo.toml
ipx-protocol/canisters/ipx-dao/src/: lib.rs
ipx-protocol/canisters/ipx-stream/: Cargo.toml
ipx-protocol/canisters/ipx-stream/src/: lib.rs
ipx-protocol/canisters/nft-registry/: Cargo.toml
ipx-protocol/canisters/nft-registry/src/: lib.rs
ipx-protocol/canisters/revenue-api-connector/: Cargo.toml
ipx-protocol/canisters/revenue-api-connector/src/: lib.rs
ipx-protocol/canisters/vault/: Cargo.toml
ipx-protocol/canisters/vault/src/: lib.rs
scripts/: generate-declarations.sh
(+32 files in other folders)
