[package]
name = "nft-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
ark-bn254 = "0.3.0"
ark-ff = "0.3.0"
ark-groth16 = "0.3.0"
ark-serialize = "0.3.0"
sha2 = "0.10.6"
hex = "0.4.3"
